--- a/CG2_00_01.vcxproj
+++ b/CG2_00_01.vcxproj
@@ -100,6 +100,8 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Sprite.cpp" />
+    <ClCompile Include="SpriteBasis.cpp" />
     <ClCompile Include="StringUtility.cpp" />
     <ClCompile Include="WindowsApp.cpp" />
   </ItemGroup>
@@ -130,6 +132,8 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="externals\imgui\imstb_truetype.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="Logger.h" />
+    <ClInclude Include="Sprite.h" />
+    <ClInclude Include="SpriteBasis.h" />
     <ClInclude Include="StringUtility.h" />
     <ClInclude Include="WindowsApp.h" />
   </ItemGroup>
