--- a/project/imgui.ini
+++ b/project/imgui.ini
@@ -9,7 +9,22 @@ Size=550,680
 Collapsed=1
 
 [Window][Window]
-Pos=37,104
+Pos=1,249
 Size=350,287
+Collapsed=0
+
+[Window][RailCamera]
+Pos=141,88
+Size=155,154
+Collapsed=0
+
+[Window][Rail]
+Pos=21,185
+Size=354,187
+Collapsed=0
+
+[Window][a]
+Pos=2,357
+Size=348,107
 Collapsed=0
 
