フレームワーク完成

--- a/project/CG2_00_01.vcxproj
+++ b/project/CG2_00_01.vcxproj
@@ -141,6 +141,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="application\Skydome.cpp" />
     <ClCompile Include="application\score.cpp" />
     <ClCompile Include="engine\GameCore.cpp" />
+    <ClCompile Include="engine\TYFrameWork.cpp" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Object3d.PS.hlsl">
@@ -194,6 +195,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="application\Skydome.h" />
     <ClInclude Include="application\score.h" />
     <ClInclude Include="engine\GameCore.h" />
+    <ClInclude Include="engine\TYFrameWork.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="externals\imgui\LICENSE.txt" />
