サウンドをファイル分け

--- a/project/CG2_00_01.vcxproj.filters
+++ b/project/CG2_00_01.vcxproj.filters
@@ -301,6 +301,9 @@
     <ClInclude Include="engine\TYFrameWork.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="engine\sound.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="externals\imgui\LICENSE.txt">
