--- a/project/CG2_00_01.vcxproj
+++ b/project/CG2_00_01.vcxproj
@@ -165,6 +165,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="engine\DirectXBasis.h" />
     <ClInclude Include="engine\mathFunc.h" />
     <ClInclude Include="engine\operatorOverload.h" />
+    <ClInclude Include="engine\sound.h" />
     <ClInclude Include="externals\imgui\imconfig.h" />
     <ClInclude Include="externals\imgui\imgui.h" />
     <ClInclude Include="externals\imgui\imgui_impl_dx12.h" />
