--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -5,7 +5,7 @@ on:
       - master
       
 env:
-  SOLUTION_FILE_PATH: project/CG2_00_01.sin
+  SOLUTION_FILE_PATH: project/CG2_00_01.sln
   CONFIGURATION: Release
   
 jobs:
