--- a/project/CG2_00_01.vcxproj.filters
+++ b/project/CG2_00_01.vcxproj.filters
@@ -180,6 +180,9 @@
     <ClCompile Include="engine\Audio.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="engine\ParticleClass.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Object3d.PS.hlsl">
@@ -188,6 +191,8 @@
     <FxCompile Include="Object3d.VS.hlsl">
       <Filter>shader</Filter>
     </FxCompile>
+    <FxCompile Include="Particle.PS.hlsl" />
+    <FxCompile Include="Particle.VS.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="externals\imgui\imconfig.h">
@@ -310,6 +315,9 @@
     <ClInclude Include="engine\Audio.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="engine\ParticleClass.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="externals\imgui\LICENSE.txt">
@@ -320,5 +328,6 @@
     <None Include="Object3d.hlsli">
       <Filter>shader</Filter>
     </None>
+    <None Include="Particle.hlsli" />
   </ItemGroup>
 </Project>
